ghc-4335c07/testsuite/tests/indexed-types/should_fail/T10817.stderr

T10817.hs:9:3: error:
    The type family application ‘F a’
      is no smaller than the instance head
    (Use UndecidableInstances to permit this)
    In the class declaration for ‘C’
